# shortlist

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALLATION.md  README.md  TODO.md  build_sidecar.sh  example.env  main.py  package-lock.json  package.json  pyproject.toml  start.bat  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/skills/status-report/: SKILL.md
.github/workflows/: ci.yml  release.yml
backend/: app.py  config.py  config_manager.py  database.py  job_enrichment.py  log_sanitizer.py  resume_parser.py  safe_write.py  todo_extractor.py  validation.py
backend/agent/: README.md  __init__.py  agent.py  base.py  job_search_agent.py  langchain_agent.py  langchain_tools.py  tools.py  user_profile.py
backend/agent/default/: __init__.py  agent.py  onboarding_agent.py  prompts.py  resume_parser.py
backend/agent/fixed_pipeline/: DESIGN.md  __init__.py  agent.py  context.py  feedback.py  (+8 more)
backend/llm/: anthropic_provider.py  factory.py  gemini_provider.py  langchain_factory.py  llm_factory.py  model_listing.py  ollama_provider.py  openai_provider.py
backend/models/: __init__.py  application_todo.py  chat.py  dspy_example.py  job.py  job_document.py  search_result.py
backend/routes/: chat.py  config.py  job_documents.py  jobs.py  optimize.py  profile.py  resume.py
backend/telemetry/: export.py
docs/: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALLATION.md  LANGCHAIN_MIGRATION.md  RESUME_COVER_LETTER_UI_REPORT.md  SSE_ARCHITECTURE.md  TODO.md  UI_REDESIGN_REPORT.md  config.example.json
docs/design/: job-search-results-panel.md
frontend/: package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
migrations/versions/: 108aac5da60d_add_indexes_on_frequently_queried_.py  2d18089fe7f9_initial_baseline.py  a1b2c3d4e5f6_add_foreign_key_cascades.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
tests/: GROSMAN.md  TEST_PLAN.md  test_data_safety.py  test_database_integrity.py  test_error_handling.py  test_input_validation.py
(+88 files in other folders)
