[project]
name = "shortlist"
version = "0.9.0"
description = "A desktop app and web app to track and manage job applications with an AI-powered assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-cors>=4.0",
    "anthropic>=0.45",
    "openai>=1.0",
    "google-genai>=1.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "cloudscraper>=1.2.71",
    "python-dotenv>=1.2.1",
    "pymupdf>=1.27.1",
    "python-docx>=1.2.0",
    "langchain-core>=0.3,<1.0",
    "langchain>=0.3,<1.0",
    "langchain-anthropic>=0.3,<1.0",
    "langchain-openai>=0.3,<1.0",
    "langchain-google-genai>=2.0,<3.0",
    "langchain-ollama>=0.3,<1.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
