[project]
name = "shortlist"
version = "0.12.0"
description = "A desktop app and web app to track and manage job applications with an AI-powered assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-cors>=4.0",
    "anthropic>=0.45",
    "openai>=1.0",
    "google-genai>=1.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "cloudscraper>=1.2.71",
    "python-dotenv>=1.2.1",
    "pymupdf>=1.27.1",
    "python-docx>=1.2.0",
    "litellm>=1.80",
    "tavily>=1.1.0",
    "tavily-python>=0.7.22",
    "dspy>=3.1.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
